[package]
name = "ez_config"
version = "0.1.0"
edition = "2021"
description = "A lightweight and simple to use mapper from environment variables to config classes."
license = "MIT"
keywords = ["config", "configuration", "environment-variable", "env"]
homepage = "https://github.com/s-soroosh/ez-config"
repository = "https://github.com/s-soroosh/ez-config"

readme = "../README.md"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
proc-macro2 = "1.0"
quote = "1.0"
syn = { version = "1.0", features = ["full", "extra-traits"] }


[lib]

proc-macro = true